--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -44,7 +44,7 @@
 }
 
 .about-us__button {
-  padding: 14px 13px 8px 12px;
+  padding: 14px 12px;
   text-transform: uppercase;
   font-weight: 700;
   font-family: $font-Roboto;
@@ -52,8 +52,8 @@
   justify-content: center;
   font-size: 14px;
   line-height: 16.41px;
-  letter-spacing: 1px;
-  margin-top: 20px;
+  letter-spacing: 0.9px;
+  margin-top: 18px;
   box-sizing: content-box;
 }
 
