--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,9 +1,9 @@
 .modal {
   position: fixed;
-  top: 0;
+  top: 83px;
   right: 0;
   bottom: 0;
-  left: 0;
+  left: -18px;
   z-index: 1000;
 
   display: flex;
@@ -27,6 +27,11 @@
 
   &::-webkit-scrollbar {
     display: none;
+  }
+
+  .btn {
+    width: 100%;
+    margin-top: 23px;
   }
 }
 
@@ -77,12 +82,13 @@
   font-weight: 400;
   font-size: 30px;
   line-height: 42.19px;
-  margin: 0 0 15px;
+  margin: 0 0 2px;
 }
 
 .modal__description {
   margin: 0 0 40px;
 }
+
 
 .modal__close-btn {
   position: absolute;
@@ -134,3 +140,4 @@
 
   pointer-events: auto;
 }
+
