--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -70,6 +70,10 @@
     margin-bottom: 13px;
   }
 
+  .about-us p {
+    margin-bottom: 19px;
+  }
+
   .about-us__button {
     margin-top: 0;
   }
