--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -47,6 +47,14 @@
   }
 }
 
+@include vp-1023 {
+  .control__mark {
+    top: 0;
+    bottom: 0;
+    margin: auto;
+  }
+}
+
 @include vp-767 {
   .control {
     min-height: 30px;
