--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -85,7 +85,7 @@
     display: flex;
     justify-content: space-between;
     margin-right: 0;
-    margin-bottom: 37px;
+    margin-bottom: 40px;
     padding-right: 20px;
   }
 
@@ -94,7 +94,7 @@
   }
 
   .footer__socials {
-    margin: 0 5px 5px;
+    margin: 9px 5px 5px;
     align-items: center;
   }
 
@@ -106,7 +106,7 @@
 
 @include vp-767 {
   .footer__container {
-    padding: 33px 0 35px;
+    padding: 37px 0 35px;
     flex-direction: column;
   }
 
@@ -133,7 +133,7 @@
   }
 
   .footer__socials {
-    margin-bottom: 22px;
+    margin: 0 0 22px;
   }
 
   .footer__nav {
