--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -25,7 +25,7 @@
   margin-right: 20px;
 }
 
-.hedaer__logo-img {
+.header__logo-img {
   width: 215px;
   height: 55px;
 }
@@ -108,5 +108,10 @@
 
   .header__icon {
     top: 1px;
+  }
+
+  .header__logo-img {
+    width: 35px;
+    height: 35px;
   }
 }
